--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>My Choose-Your-Own Adventure!</title>
+    <title>A Walk in the Forest</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>Choose Your Own Adventure</h1>
+    <h1>A Walk in the Forest</h1>
     <p>This is the beginning.</p>
+    <p> You have just entered the forest and have gotten to a fork in the path,
+      Do I take the Left Path
+      Or Do I take the Right path
+    </p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
