--- a/rightpath.html
+++ b/rightpath.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Right Path</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>Right Path</h1>
+    <p>You walk down the right path and find a beautiful clearing filled with flowers and a gentle stream. You can <a href="step 2 right path/Rest up.html">rest for a while</a> or <a href="step 2 right path/Continue.html">continue your adventure</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
