--- a/step 2 right path/Continue.html
+++ b/step 2 right path/Continue.html
@@ -7,19 +7,17 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Continue</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>There is a tree blocking your path</h1>
+    <p>You can try to climb over it or go around it.</p>
+    <ul>
+  <li><a href="../step 3 right path/Climbover.html">Climb Over</a></li>
+      <li><a href="../step 3 right path/Go around.html">Go Around</a></li>
+    </ul>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
