--- a/step 4 right path/Cave.html
+++ b/step 4 right path/Cave.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Cave</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>You Walk into the Cave</h1>
+    <p>You walk into the cave and encounter another fork in the path, On the right you see a bright light coming from deep inside the cave, On the left it is pitch black, do you want to go to the <a href="../step 6 right path cave/rightpathcaveman.html">bright light</a> or do you want to go to the <a href="../step 6 right path cave/leftpath2.html">pitch black</a>?</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
