--- a/step 5 right path the bear/fightthebear.html
+++ b/step 5 right path the bear/fightthebear.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Fight the Bear</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>You raise your hands to fight</h1>
+    <p>Smart enough to not go on the tree but not smart enough to run from the bear.. It mauls you and you perish.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
