--- a/step 7 right path final/final.html
+++ b/step 7 right path final/final.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Final</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>For some reason you keep walking </h1>
+    <p>While walking you wonder why there is a cave in the middle of a forest but you continue to the light, you come out of the cave and realize you are back at the start of the path, you go home and live happily ever after.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
