--- a/step 2 right path/Rest up.html
+++ b/step 2 right path/Rest up.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Rest up</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>Rest Up</h1>
+    <p>You find a comfortable spot under a tree and decide to rest for a while. After a short nap, you feel refreshed and ready to <a href="../step 2 right path/Continue.html">continue your adventure</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
