--- a/step 3 right path/Climbover.html
+++ b/step 3 right path/Climbover.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Climbover</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>You Try to Climb Over</h1>
+    <p>Bad for you though it rained and the tree was slippery, you fall off and perish.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
