--- a/step 3 right path/Go around.html
+++ b/step 3 right path/Go around.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Go Around</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>You Walk Around</h1>
+    <p>Unlike the guy before you, you realize the tree is slippery and decide to go around it. You walk for a few minutes before coming across a cave, do you want to go inside the <a href="../step 4 right path/Cave.html">Cave</a> or do you want to <a href="../step 4 right path/continue2.html">continue on</a>?</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
