--- a/step 5 right path the bear/run.html
+++ b/step 5 right path the bear/run.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>Run</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>You decide to turn around a run away</h1>
+    <p>You run as fast as you can away from the bear, but its a bear and it catches you and makes you into dinner, you perish.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
