--- a/step 6 right path cave/leftpath2.html
+++ b/step 6 right path cave/leftpath2.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>leftpath2</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>You Walk into the darkness</h1>
+    <p>After walking for about 6 or 7 minutes you see a light at the end of the cave. You think about it for a minute and decide if you should return to the <a href="../step 6 right path cave/rightpathcaveman.html">Right Path</a> or continue towards the <a href="../step 7 right path final/final.html">Light</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
