--- a/step 6 right path cave/rightpathcaveman.html
+++ b/step 6 right path cave/rightpathcaveman.html
@@ -7,19 +7,13 @@
       name="description"
       content="A simple choose your own adventure game."
     />
-    <title>A Walk in the Forest</title>
+    <title>rightpathcaveman</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
   <body>
-    <h1>A Walk in the Forest</h1>
-    <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
-    </p>
+    <h1>You walk towards the light</h1>
+    <p>You enter a small room with a fire in the middle, it looks like a campfire but theres a weird shadow on the wall. There is a caveman who is hiding on the ceiling, he drops on you like a bear and you perish.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
