--- a/step 3 right path/Climbover.html
+++ b/step 3 right path/Climbover.html
@@ -14,6 +14,7 @@
   <body>
     <h1>You Try to Climb Over</h1>
     <p>Bad for you though it rained and the tree was slippery, you fall off and perish.</p>
+    <p>Game Over. You can restart the game by going back to the <a href="index.html">beginning</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
