--- a/step 5 right path the bear/fightthebear.html
+++ b/step 5 right path the bear/fightthebear.html
@@ -14,6 +14,7 @@
   <body>
     <h1>You raise your hands to fight</h1>
     <p>Smart enough to not go on the tree but not smart enough to run from the bear.. It mauls you and you perish.</p>
+    <p>Game Over. You can restart the game by going back to the <a href="index.html">beginning</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
