--- a/step 5 right path the bear/run.html
+++ b/step 5 right path the bear/run.html
@@ -14,6 +14,7 @@
   <body>
     <h1>You decide to turn around a run away</h1>
     <p>You run as fast as you can away from the bear, but its a bear and it catches you and makes you into dinner, you perish.</p>
+    <p>Game Over. You can restart the game by going back to the <a href="index.html">beginning</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
