--- a/step 7 right path final/final.html
+++ b/step 7 right path final/final.html
@@ -14,6 +14,7 @@
   <body>
     <h1>For some reason you keep walking </h1>
     <p>While walking you wonder why there is a cave in the middle of a forest but you continue to the light, you come out of the cave and realize you are back at the start of the path, you go home and live happily ever after.</p>
+    <p>Game Over. You can restart the game by going back to the <a href="index.html">beginning</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
