--- a/leftpath.html
+++ b/leftpath.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body class="left-path">
     <h1>Left Path</h1>
     <p> You walk down the left path but low and behold its trapped and you fall down a pit that was covered by leaves and perish.</p>
     <p>Game Over. You can restart the game by going back to the <a href="index.html">beginning</a>.</p>
