--- a/rightpath.html
+++ b/rightpath.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body class="rightpath-bg">
     <h1>Right Path</h1>
     <p>You walk down the right path and find a beautiful clearing filled with flowers and a gentle stream. You can <a href="step 2 right path/Rest up.html">rest for a while</a> or <a href="step 2 right path/Continue.html">continue your adventure</a>.</p>
     <hr />
