--- a/step 2 right path/Continue.html
+++ b/step 2 right path/Continue.html
@@ -8,10 +8,10 @@
       content="A simple choose your own adventure game."
     />
     <title>Continue</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body> class="continue-bg">
     <h1>There is a tree blocking your path</h1>
     <p>You can try to climb over it or go around it.</p>
     <ul>
