--- a/step 3 right path/Climbover.html
+++ b/step 3 right path/Climbover.html
@@ -8,13 +8,13 @@
       content="A simple choose your own adventure game."
     />
     <title>Climbover</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body> class="climbover-bg">
     <h1>You Try to Climb Over</h1>
     <p>Bad for you though it rained and the tree was slippery, you fall off and perish.</p>
-    <p>Game Over. You can restart the game by going back to the <a href="index.html">beginning</a>.</p>
+    <p>Game Over. You can restart the game by going back to the <a href="../index.html">beginning</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
