--- a/step 3 right path/Go around.html
+++ b/step 3 right path/Go around.html
@@ -8,10 +8,10 @@
       content="A simple choose your own adventure game."
     />
     <title>Go Around</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body> class="goaround-bg">
     <h1>You Walk Around</h1>
     <p>Unlike the guy before you, you realize the tree is slippery and decide to go around it. You walk for a few minutes before coming across a cave, do you want to go inside the <a href="../step 4 right path/Cave.html">Cave</a> or do you want to <a href="../step 4 right path/continue2.html">continue on</a>?</p>
     <hr />
