--- a/step 4 right path/Cave.html
+++ b/step 4 right path/Cave.html
@@ -8,10 +8,10 @@
       content="A simple choose your own adventure game."
     />
     <title>Cave</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body> class="cave-bg">
     <h1>You Walk into the Cave</h1>
     <p>You walk into the cave and encounter another fork in the path, On the right you see a bright light coming from deep inside the cave, On the left it is pitch black, do you want to go to the <a href="../step 6 right path cave/rightpathcaveman.html">bright light</a> or do you want to go to the <a href="../step 6 right path cave/leftpath2.html">pitch black</a>?</p>
     <hr />
