--- a/step 4 right path/continue2.html
+++ b/step 4 right path/continue2.html
@@ -8,10 +8,10 @@
       content="A simple choose your own adventure game."
     />
     <title>Continue2</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body> class="continue2-bg">
     <h1>You skip the cave</h1>
     <p>You decide to skip the cave because you realize you aren't built for all that, unlucky you though a bear has been watching you the whole time, The bear is very angry at you for no reason and it is now charging at you, do you want to <a href="../step 5 right path the bear/fightthebear.html">fight the bear</a> or do you want to <a href="../step 5 right path the bear/run.html">run away</a>?</p>
     <hr />
