--- a/step 6 right path cave/leftpath2.html
+++ b/step 6 right path cave/leftpath2.html
@@ -8,10 +8,10 @@
       content="A simple choose your own adventure game."
     />
     <title>leftpath2</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body> class="leftpath2-bg">
     <h1>You Walk into the darkness</h1>
     <p>After walking for about 6 or 7 minutes you see a light at the end of the cave. You think about it for a minute and decide if you should return to the <a href="../step 6 right path cave/rightpathcaveman.html">Right Path</a> or continue towards the <a href="../step 7 right path final/final.html">Light</a>.</p>
     <hr />
