--- a/step 6 right path cave/rightpathcaveman.html
+++ b/step 6 right path cave/rightpathcaveman.html
@@ -8,13 +8,13 @@
       content="A simple choose your own adventure game."
     />
     <title>rightpathcaveman</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body>
+  <body> class="rightpathcaveman-bg">
     <h1>You walk towards the light</h1>
     <p>You enter a small room with a fire in the middle, it looks like a campfire but theres a weird shadow on the wall. There is a caveman who is hiding on the ceiling, he drops on you like a bear and you perish.</p>
-    <p>Game Over. You can restart the game by going back to the <a href="index.html">beginning</a>.</p>
+    <p>Game Over. You can restart the game by going back to the <a href="../index.html">beginning</a>.</p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
