--- a/step 2 right path/Continue.html
+++ b/step 2 right path/Continue.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body> class="continue-bg">
+  <body class="continue-bg">
     <h1>There is a tree blocking your path</h1>
     <p>You can try to climb over it or go around it.</p>
     <ul>
