--- a/step 2 right path/Rest up.html
+++ b/step 2 right path/Rest up.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body> class="restup-bg">
+  <body class="rest-bg">
     <h1>Rest Up</h1>
     <p>You find a comfortable spot under a tree and decide to rest for a while. After a short nap, you feel refreshed and ready to <a href="../step 2 right path/Continue.html">continue your adventure</a>.</p>
     <hr />
