--- a/step 6 right path cave/rightpathcaveman.html
+++ b/step 6 right path cave/rightpathcaveman.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body> class="rightpathcaveman-bg">
+  <body class="rightpathcaveman-bg">
     <h1>You walk towards the light</h1>
     <p>You enter a small room with a fire in the middle, it looks like a campfire but theres a weird shadow on the wall. There is a caveman who is hiding on the ceiling, he drops on you like a bear and you perish.</p>
     <p>Game Over. You can restart the game by going back to the <a href="../index.html">beginning</a>.</p>
