--- a/step 5 right path the bear/fightthebear.html
+++ b/step 5 right path the bear/fightthebear.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body> class="fightthebear-bg">
+  <body class="fightthebear-bg">
     <h1>You raise your hands to fight</h1>
     <p>Smart enough to not go on the tree but not smart enough to run from the bear.. It mauls you and you perish.</p>
     <p>Game Over. You can restart the game by going back to the <a href="../index.html">beginning</a>.</p>
