--- a/step 6 right path cave/leftpath2.html
+++ b/step 6 right path cave/leftpath2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css" />
     <base href="./" />
   </head>
-  <body> class="leftpath2-bg">
+  <body class="leftpath2-bg">
     <h1>You Walk into the darkness</h1>
     <p>After walking for about 6 or 7 minutes you see a light at the end of the cave. You think about it for a minute and decide if you should return to the <a href="../step 6 right path cave/rightpathcaveman.html">Right Path</a> or continue towards the <a href="../step 7 right path final/final.html">Light</a>.</p>
     <hr />
