--- a/step 6 right path cave/rightpathcaveman.html
+++ b/step 6 right path cave/rightpathcaveman.html
@@ -13,8 +13,25 @@
   </head>
   <body class="rightpathcaveman-bg">
     <h1>You walk towards the light</h1>
-    <p>You enter a small room with a fire in the middle, it looks like a campfire but theres a weird shadow on the wall. There is a caveman who is hiding on the ceiling, he drops on you like a bear and you perish.</p>
-    <p>Game Over. You can restart the game by going back to the <a href="../index.html">beginning</a>.</p>
+    <img
+      src="../images/caveman-159964_1280.png"
+      alt="Caveman"
+      style="
+        display: block;
+        margin: 0 auto 1em auto;
+        max-width: 80%;
+        height: 200px;
+      "
+    />
+    <p>
+      You enter a small room with a fire in the middle, it looks like a campfire
+      but theres a weird shadow on the wall. There is a caveman who is hiding on
+      the ceiling, he drops on you like a bear and you perish.
+    </p>
+    <p>
+      Game Over. You can restart the game by going back to the
+      <a href="../index.html">beginning</a>.
+    </p>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
