--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- used ai to help with background images and formatting -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,12 +15,13 @@
   <body>
     <h1>A Walk in the Forest</h1>
     <p>This is the beginning.</p>
-    <p> You have just entered the forest and have gotten to a fork in the path,
-      Do I take the 
-      <a href="leftpath.html">Left Path</a>
-      Or Do I take the 
-<a href="rightpath.html">Right Path</a> 
+    <p>
+      You have just entered the forest and have gotten to a fork in the path.
     </p>
+    <ul>
+      <li><a href="leftpath.html">Left Path</a></li>
+      <li><a href="rightpath.html">Right Path</a></li>
+    </ul>
     <hr />
     <small>
       <a href="citations.html">Citations</a>
