--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>A Walk in the Forest</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <base href="./" />
+    <meta property="og:title" content="A Walk in the Forest" />
+    <meta property="og:description" content="A simple choose your own adventure game." />
+    <meta property="og:image" content="images/pexel-pixabay-33109.jpg" />
+    <meta property="og:url" content="https://iacs-cs.github.io/choose-your-own-adventure-deanbean9000/" />
   </head>
   <body>
     <h1>A Walk in the Forest</h1>
