--- a/step 6 right path cave/rightpathcaveman.html
+++ b/step 6 right path cave/rightpathcaveman.html
@@ -13,6 +13,9 @@
   </head>
   <body class="rightpathcaveman-bg">
     <h1>You walk towards the light</h1>
+    <audio controls autoplay loop style="display:block; margin: 1em auto;">
+      <source src="../audio/inside-a-cave-effect-240264.mp3" type="audio/mpeg">
+    </audio>
     <img
       src="../images/caveman-159964_1280.png"
       alt="Caveman"
