--- a/step 7 right path final/final.html
+++ b/step 7 right path final/final.html
@@ -12,12 +12,45 @@
     <base href="./" />
   </head>
   <body class="final-bg">
-    <h1>For some reason you keep walking </h1>
-    <p>While walking you wonder why there is a cave in the middle of a forest but you continue to the light, you come out of the cave and realize you are back at the start of the path, you go home and live happily ever after.</p>
-    <p>Game Over. You can restart the game by going back to the <a href="../index.html">beginning</a>.</p>
-    <hr />
-    <small>
-      <a href="citations.html">Citations</a>
-    </small>
+    <div class="text-bg">
+      <h1>For some reason you keep walking </h1>
+      <p>While walking you wonder why there is a cave in the middle of a forest but you continue to the light, you come out of the cave and realize you are back at the start of the path, you go home and live happily ever after.</p>
+      <p>Game Over. You can restart the game by going back to the <a href="../index.html">beginning</a>.</p>
+      <h2> Your Path </h2>
+      <table border="1">
+        <tr>
+          <th>Step</th>
+          <th>Choice</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Right Path</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Continue</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Go around</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Enter Cave</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Pitch black</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>The light</td>
+        </tr>
+      </table>
+      <hr />
+      <small>
+        <a href="citations.html">Citations</a>
+      </small>
+    </div>
   </body>
 </html>
