--- a/step 6 right path cave/rightpathcaveman.html
+++ b/step 6 right path cave/rightpathcaveman.html
@@ -13,9 +13,6 @@
   </head>
   <body class="rightpathcaveman-bg">
     <h1>You walk towards the light</h1>
-    <audio controls autoplay loop style="display:block; margin: 1em auto;">
-      <source src="../audio/inside-a-cave-effect-240264.mp3" type="audio/mpeg">
-    </audio>
     <img
       src="../images/caveman-159964_1280.png"
       alt="Caveman"
@@ -39,5 +36,8 @@
     <small>
       <a href="citations.html">Citations</a>
     </small>
+    <audio controls autoplay loop style="position:fixed; bottom:10px; left:50%; transform:translateX(-50%); z-index:100;">
+      <source src="../audio/inside-a-cave-effect-240264.mp3" type="audio/mpeg">
+    </audio>
   </body>
 </html>
