--- a/citations.html
+++ b/citations.html
@@ -15,8 +15,7 @@
     <h1>Sources &amp; Citations</h1>
     <ul>
       <li>Template: original project template from Mr. Hinkle.</li>
-      <!-- List any other sources you used as you worked on 
-       the project, including giving credit for images, etc. -->
-    </ul>
+      <li> Images, backgrounds, and audio all from pixabay.com all images and audio were labeled free to use
+        <li> used chatgpt and copilot to help debug issues and format backgrounds, add a meta tag, and add a table</li>        
   </body>
 </html>
